# ros2-astar-pathfinder

./: check_spawn.py  report.md
src/astar_robot_description/: CMakeLists.txt  package.xml
src/astar_robot_description/urdf/: astar_robot.urdf
src/astar_robot_sim/: package.xml  setup.cfg  setup.py
src/astar_robot_sim/astar_robot_sim/: astar_planner.py  dstar_lite_planner.py  robot_controller.py
src/astar_robot_sim/config/: astar_house.rviz
src/astar_robot_sim/launch/: astar_sim.launch.py  house_navigation.launch.py
src/astar_robot_sim/worlds/: grid_world.world  house_with_actors.world
src/perception_pkg/: README.md  package.xml  setup.py
src/perception_pkg/config/: params.yaml  rviz_config.rviz
src/perception_pkg/launch/: perception.launch.py
src/perception_pkg/perception_pkg/: perception_node.py
src/perception_pkg/perception_pkg/utils/: detector.py  image_utils.py
